--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-lastest
+    runs-on: windows-latest
     steps:
       - name: checkout
         uses: actions/checkout@v1
