--- a/DayZ cleaner/DayZ cleaner.csproj
+++ b/DayZ cleaner/DayZ cleaner.csproj
@@ -58,7 +58,7 @@
     <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>14643CB59ADA46BC7A25708E0D916749D95E42E8</ManifestCertificateThumbprint>
